--- a/maintenance/css/styles.css
+++ b/maintenance/css/styles.css
@@ -3,8 +3,7 @@
 * Website URL: don't know yet/
 * Author: Lagbalu Joseph (Jos33y)
 ======================================================== */
-
-@import url('https://fonts.googleapis.com/css?family=Lato|Open+Sans|PT+Sans|PT+Serif|PT+Serif+Caption|Roboto|Roboto+Mono&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
 @import "//netdna.bootstrapcdn.com/font-awesome/3.0/css/font-awesome.css";
 
 
@@ -133,13 +132,13 @@ body {
 
 .logo {
     margin-left: 40px;
-    width: 40px;
-    height: 40px;
+    width: 25px;
+    height: 25px;
 }
 
 .logo-name {
     color: #0f086d;
-    font-size: 18px;
+    font-size: 15px;
     font-weight: 800;
     letter-spacing: 1px;
 }
@@ -166,11 +165,30 @@ body {
     padding: 5%;
 }
 
-.screen-border {
+/* Border STyles */
+.search-border {
     color: #ffffff;
     background-color: #4a73f9;
     border: 2px solid #333436;
-    padding: 4%;
+    width: 100%;
+    padding: 1%;
+
+}
+
+.screen-border {
+    margin-right: 8%;
+    margin-left: 8%;
+    color: #ffffff;
+    background-color: #99116e;
+    padding: 2%;
+}
+
+.update-border {
+    margin-right: 8%;
+    margin-left: 8%;
+    color: #ffffff;
+    background-color: #281199;
+    padding: 2%;
 }
 
 .btn.btn-save {
@@ -211,41 +229,48 @@ footer {
 
 /** Search Styles **/
 .search-screen {
-    margin: 10%;
+    margin-top: 0%;
+    margin-left: 8%;
+    margin-right: 8%;
 }
 
 .search-head {
-    margin-top: 2%;
-    margin-bottom: 3%;
     text-align: center;
-    font-size: 35px;
+    font-size: 25px;
     font-weight: bolder;
     color: #ffff00;
 }
 
 .search-one {
     color: #fff;
-    font-size: 20px;
+    font-size: 18px;
     font-weight: bolder;
     letter-spacing: 1px;
 }
 
 /** Input Styles **/
 .search-gov input {
-    border: 2px solid #fff;
+    border: 1px solid #fff;
     border-radius: 0;
-    font-size: 30px;
+    font-size: 20px;
     font-weight: 700;
 }
 
-.search-part input {
-    border: 2px solid #fff;
+.search-input input {
+    border: 1px solid #fff;
     border-radius: 0;
-    font-size: 13px;
-    font-weight: 600;
+    font-size: 12px;
+    font-weight: 550;
+
 }
 
-.search-part,
+.search-label {
+    font-size: 12px;
+    font-weight: 550;
+    font-family: 'Roboto', sans-serif;
+}
+
+.search-input,
 .search-res input::placeholder {
     font-family: FontAwesome;
     font-weight: normal;
@@ -255,15 +280,16 @@ footer {
     padding-left: 5px;
     padding-top: 2px;
     color: gray;
-    text-align: center;
+
 }
 
-.search-part select {
+.search-input select {
     color: gray;
     border: 2px solid #fff;
     border-radius: 0;
-    font-size: 13px;
-    font-weight: 600;
+    font-size: 11px;
+    font-weight: 550;
+    font-family: 'Roboto', sans-serif;
 }
 
 
@@ -271,15 +297,16 @@ footer {
 
 .search-two {
     color: #fff;
-    font-size: 22px;
+    font-size: 18px;
     font-weight: bolder;
     letter-spacing: 1px;
 }
 
 .search-note {
     color: #ffff00;
-    font-size: 13px;
-    font-weight: 600;
+    font-size: 10px;
+    font-weight: 500;
+    font-family: 'Roboto', sans-serif;
 
 }
 
@@ -288,6 +315,7 @@ footer {
     font-size: 12px;
     font-weight: 600;
     letter-spacing: 1px;
+    font-family: 'Roboto', sans-serif;
 }
 
 
@@ -324,7 +352,7 @@ footer {
 .search-btn .btn.btn-success {
     color: #fff;
     text-align: center;
-    font-size: 15px;
+    font-size: 13px;
     font-weight: 600;
     letter-spacing: 1px;
     border-color: #0d0d0e;
@@ -337,7 +365,7 @@ footer {
 
 .search-btn .btn.btn-warning {
     text-align: center;
-    font-size: 22px;
+    font-size: 17px;
     font-weight: 700;
     margin-left: 20%;
     letter-spacing: 1px;
@@ -402,18 +430,26 @@ footer {
 
 .version .btn.btn-danger {
     text-align: center;
-    font-size: 15px;
+    font-size: 12px;
     font-weight: 600;
     letter-spacing: 1px;
     border-color: #0d0d0e;
     border-radius: 0;
 
 }
+.version .btn.btn-success{
+    text-align: center;
+    font-size: 12px;
+    font-weight: 600;
+    letter-spacing: 1px;
+    border-color: #0d0d0e;
+    border-radius: 0;
+}
 
 .version-time {
     margin-left: 3%;
     color: #ffff00;
-    font-size: 15px;
+    font-size: 12px;
     font-weight: 600;
 }
 
@@ -560,9 +596,9 @@ footer {
 
 .publish-mod-border {
     color: #ffffff;
-    background-color: #FF9966;
+    background-color: #fc7b3a;
     border: 2px solid #333436;
-    padding: 4%;
+    padding: 1%;
 }
 
 .publish-mod-border .changed input {
@@ -571,10 +607,50 @@ footer {
     font-weight: 700;
 }
 
+.publish-mod-border .empty input{
+    background-color: transparent;
+    color: transparent;
+    border-color: transparent;
+}
+
 .row.send-email {
 
     color: #111111;
     font-weight: 700;
     margin-top: 10%;
     margin-left: 13%;
+}
+
+
+/* Ajax Styling */
+
+ul {
+    color: #0d0d0e;
+    list-style: none;
+    float: left;
+    padding: 0px;
+    border-radius: 2px;
+    background-color: #fff;
+    border: 0px solid black;
+    margin-top: 0px;
+    width: 100%;
+    font-weight: 600;
+    font-size: 13px;
+}
+
+li:hover {
+    background-color: #0a0a25;
+    color: #fff;
+}
+
+.time{
+    font-size: 11px;
+}
+
+
+/* same as style */
+
+.search-res .form-check{
+    font-size: 7px;
+    font-weight: 500;
 }
