--- a/maintenance/css/styles.css
+++ b/maintenance/css/styles.css
@@ -15,6 +15,7 @@ body {
     font-family: 'Roboto', sans-serif;
     color: #4f4e4b;
     background-color: #f2f1f6;
+    overflow-x: hidden;
 
 }
 
@@ -131,7 +132,7 @@ body {
 /** Ballot STyles **/
 
 .logo {
-    margin-left: 40px;
+    margin-left: 10px;
     width: 25px;
     height: 25px;
 }
@@ -167,6 +168,8 @@ body {
 
 /* Border STyles */
 .search-border {
+    margin-top: 5%;
+    margin-right: 10%;
     color: #ffffff;
     background-color: #4a73f9;
     border: 2px solid #333436;
@@ -176,19 +179,21 @@ body {
 }
 
 .screen-border {
-    margin-right: 8%;
-    margin-left: 8%;
+    margin-top: 5px;
+    margin-right: 10%;
     color: #ffffff;
-    background-color: #99116e;
-    padding: 2%;
+    background-color: #281199;
+    padding: 1%;
+    height: 100%;
 }
 
 .update-border {
-    margin-right: 8%;
-    margin-left: 8%;
+    margin-top: 5px;
+    margin-right: 10%;
     color: #ffffff;
-    background-color: #281199;
-    padding: 2%;
+    background-color: #99116e;
+    padding: 1%;
+    height: 100%;
 }
 
 .btn.btn-save {
@@ -209,7 +214,7 @@ body {
 
 /** Footer STyle **/
 footer {
-    margin-top: 15%;
+    margin-top: 5%;
 }
 
 
@@ -323,7 +328,6 @@ footer {
 .search-three .fas {
     color: #ffff00;
     font-size: 10px;
-    margin-bottom: 13px;
 }
 
 .search-three .btn.btn-outline-light {
@@ -397,10 +401,17 @@ footer {
 
 /** Address Style **/
 
+.note-text{
+    font-size: 11px;
+    color: #fff;
+    font-weight: 600;
+    letter-spacing: 1px;
+    text-transform: capitalize;
+}
 
 
 .address-text {
-    font-size: 13px;
+    font-size: 11px;
     color: #fff;
     font-weight: 600;
     letter-spacing: 1px;
@@ -423,23 +434,25 @@ footer {
 /** Search Type **/
 
 .version {
-    font-size: 15px;
+    font-size: 13px;
     font-weight: 600;
     margin-left: 2%;
 }
 
 .version .btn.btn-danger {
     text-align: center;
-    font-size: 12px;
+    font-size: 11px;
     font-weight: 600;
     letter-spacing: 1px;
     border-color: #0d0d0e;
     border-radius: 0;
 
 }
-.version .btn.btn-success{
+
+
+.version .btn.btn-success {
     text-align: center;
-    font-size: 12px;
+    font-size: 11px;
     font-weight: 600;
     letter-spacing: 1px;
     border-color: #0d0d0e;
@@ -449,13 +462,13 @@ footer {
 .version-time {
     margin-left: 3%;
     color: #ffff00;
-    font-size: 12px;
+    font-size: 11px;
     font-weight: 600;
 }
 
 .yellow-ballot {
     color: #ffff00;
-    font-size: 13px;
+    font-size: 10px;
     font-weight: 550;
     font-style: italic;
     letter-spacing: 0.5px;
@@ -465,7 +478,7 @@ footer {
 .search-rgov input {
     border: 2px solid #fff;
     border-radius: 0;
-    font-size: 22px;
+    font-size: 18px;
     font-weight: 700;
     padding-top: 0;
     padding-bottom: 0;
@@ -475,15 +488,14 @@ footer {
 .search-res input {
     border: 2px solid transparent;
     border-radius: 0;
-    font-size: 13px;
+    font-size: 11px;
     font-weight: 600;
-
 }
 
 .search-res textarea {
     border: 2px solid #fff;
     border-radius: 0;
-    font-size: 13px;
+    font-size: 11px;
     font-weight: 600;
 
 }
@@ -498,7 +510,10 @@ footer {
 .search-res .fas {
     color: #ffff00;
     font-size: 10px;
-    margin-bottom: 13px;
+}
+
+.table td {
+    padding: 2px;
 }
 
 .search-res .btn.btn-outline-light {
@@ -514,7 +529,7 @@ footer {
 }
 
 .search-result {
-    line-height: 15px;
+    line-height: 13px;
 }
 
 .search-result .row {
@@ -533,17 +548,17 @@ footer {
 .btn.btn-prev {
     color: #fff;
     text-align: center;
-    font-weight: 700;
-    font-size: 18px;
+    font-weight: 600;
+    font-size: 12px;
     text-transform: capitalize;
     letter-spacing: 1px;
     background-color: rgb(22, 18, 87);
     border-color: #0d0d0e;
     border-radius: 0;
-    padding-bottom: 5px;
-    padding-top: 5px;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-bottom: 3px;
+    padding-top: 3px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 .search-result-btn .btn.btn-warning,
@@ -551,16 +566,16 @@ footer {
 .btn-danger {
     color: #fff;
     text-align: center;
-    font-weight: 700;
-    font-size: 18px;
+    font-weight: 600;
+    font-size: 12px;
     text-transform: capitalize;
     letter-spacing: 1px;
     border-color: #0d0d0e;
     border-radius: 0;
-    padding-bottom: 5px;
-    padding-top: 5px;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-bottom: 3px;
+    padding-top: 3px;
+    padding-left: 10px;
+    padding-right: 10px;
 }
 
 
@@ -595,6 +610,8 @@ footer {
 /* Publish Mode Styles */
 
 .publish-mod-border {
+    margin-top: 5px;
+    margin-right: 10%;
     color: #ffffff;
     background-color: #fc7b3a;
     border: 2px solid #333436;
@@ -607,7 +624,7 @@ footer {
     font-weight: 700;
 }
 
-.publish-mod-border .empty input{
+.publish-mod-border .empty input {
     background-color: transparent;
     color: transparent;
     border-color: transparent;
@@ -617,7 +634,7 @@ footer {
 
     color: #111111;
     font-weight: 700;
-    margin-top: 10%;
+    margin-bottom: 3%;
     margin-left: 13%;
 }
 
@@ -643,14 +660,14 @@ li:hover {
     color: #fff;
 }
 
-.time{
+.time {
     font-size: 11px;
 }
 
 
 /* same as style */
 
-.search-res .form-check{
+.search-res .form-check {
     font-size: 7px;
     font-weight: 500;
 }
