--- a/css/styles.css
+++ b/css/styles.css
@@ -20,7 +20,6 @@ header {
 }
 
 
-
 .nav-link {
     font-size: 12px;
     font-weight: 700;
@@ -63,39 +62,44 @@ header {
 }
 
 .book-image {
-    width: 280px;
+    width: 255px;
     background: #fff;
-    padding: 5px 5px;
     border: 1px solid rgb(22, 22, 22);
 }
 
 .caption {
-    font-size: 12px;
+    font-size: 15px;
 }
 
 .text-one {
-    margin-top: 3%;
-    font-size: 40px;
+    font-size: 45px;
     font-weight: 400;
-    color: darkred;
-    font-family: 'Roboto Slab', serif;
+    line-height: 1.5;
+    color: #a82e2e;
+   
 }
-
+.first-col .btn{
+    background-color: #d75f04;
+    color: #fff;
+    padding: 8px 30px ;
+    margin-bottom: 3%;
+}
 .btn {
-    background-color: chocolate;
+    background-color: #d75f04;
     color: #fff;
 }
 
-.list {
+.list{
     list-style-type: none;
-
-
 }
 
 .list li a {
-    color: chocolate;
+    color: #d75f04;
     text-transform: uppercase;
     font-family: 'Bitter', serif;
+    font-size: 20px;
+    line-height: 2;
+    text-decoration: none;
 
 }
 
