--- a/css/styles.css
+++ b/css/styles.css
@@ -162,16 +162,17 @@ header {
 }
 
 .donate-head {
-    font-size: 35px;
-    color: rgb(32, 32, 34);
-    letter-spacing: 1px;
-    font-family: 'Lobster', cursive;
+    font-size: 2.25em;
+    color: #333333;
+    font-family: 'Crimson Text', serif;
+    font-weight: 600;
 }
 
 .donate-para {
-    font-size: 15px;
+    font-size: 16px;
     letter-spacing: .5px;
-    line-height: 150%;
+    line-height: 1.5;
+    padding: .5em 0;
 }
 
 /** Employment Styles **/
