updated contact section

--- a/css/styles.css
+++ b/css/styles.css
@@ -24,7 +24,7 @@ header {
     font-size: 12px;
     font-weight: 700;
     margin: 8px;
-    color: #f2f1f6 !important;
+    color: #fff !important;
     font-family: 'Lato', sans-serif;
     text-transform: uppercase;
 }
