--- a/css/styles.css
+++ b/css/styles.css
@@ -10,13 +10,13 @@ body {
     margin: 0%;
     font-family: 'Lato', sans-serif;
     font-size: 16px;
-    color:#666666;
+    color: #666666;
     background-color: #f2f1f6;
 }
 
 header {
     background-color: #0e0d0d;
-    opacity: .6;
+    opacity: .7;
 
 }
 
@@ -29,6 +29,46 @@ header {
     font-family: 'Lato', sans-serif;
     text-transform: uppercase;
 }
+
+.dropdown-menu {
+    display: none;
+    position: absolute;
+    z-index: 1;
+}
+
+.dropdown:hover .dropdown-menu {
+    display: block;
+}
+
+.sub-dropdown-menu {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+}
+
+.sub-dropdown-menu a {
+    float: none;
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+    text-align: right;
+}
+
+.sub-dropdown-menu a:hover {
+    background-color: #ddd;
+}
+
+.sub-dropdown:hover .sub-dropdown-menu {
+    display: block;
+}
+
+
+
+
 
 .bg-header {
     background: url('../images/bg-hand.jpg');
@@ -77,20 +117,22 @@ header {
     font-weight: 400;
     line-height: 1.5;
     color: #a82e2e;
-   
+
 }
-.first-col .btn{
+
+.first-col .btn {
     background-color: #d75f04;
     color: #fff;
-    padding: 8px 30px ;
+    padding: 8px 30px;
     margin-bottom: 3%;
 }
+
 .btn {
     background-color: #d75f04;
     color: #fff;
 }
 
-.list{
+.list {
     list-style-type: none;
 }
 
@@ -280,30 +322,32 @@ header {
 
 }
 
-a.link{
+a.link {
     color: #df5f04;
     text-decoration: none;
 }
 
 /** ELection SPreadsheet styles **/
-.spread-sheet{
+.spread-sheet {
     margin-top: 5%;
 }
-.sheet-image{
+
+.sheet-image {
     margin-left: 0px;
     margin-right: 0px;
     border: 1px solid #0e0d0d;
 }
-.spread-sheet h4{
+
+.spread-sheet h4 {
     margin-top: 5%;
     font-size: 25px;
     font-weight: 600;
     color: #5040ae;
-   
+
 }
 
 /** Directors Styles **/
-.directors-image{
+.directors-image {
     margin-top: 30%;
     border: 1px solid #000000;
     padding: 2px;
@@ -313,20 +357,21 @@ a.link{
 
 
 /** Resolve the problem Styles **/
-.resolve-one{
+.resolve-one {
     font-size: 2.2em;
     color: #d75f04;
     font-weight: 700;
     text-transform: uppercase;
 
 }
-.resolve-two{
+
+.resolve-two {
     font-size: 2.1em;
     color: #000000;
     font-family: 'Crimson Text', serif;
 }
 
-.resolve p{
+.resolve p {
     font-size: 18px;
     line-height: 1.5;
 }
