--- a/css/styles.css
+++ b/css/styles.css
@@ -6,12 +6,13 @@
 body {
     height: 100%;
     width: 100%;
-    padding: 0%;
-    margin: 0%;
+    padding: 0;
+    margin: 0;
     font-family: 'Lato', sans-serif;
     font-size: 16px;
     color: #666666;
     background-color: #f2f1f6;
+    overflow-x: hidden;
 }
 
 header {
@@ -325,9 +326,10 @@ header {
  
 .record-req .date{
     color: #5040ae;
+
 }
 .record-req{
-    margin: 5% 15% 0;
+    margin: 5% 15% 0 15%;
     font-size: 16px;
 }
 .record-req .citizen{
@@ -339,7 +341,8 @@ header {
 }
 .record-req .texts{
    font-size:16px; 
-   text-align: justify;
+   text-align: left;
+   margin-right: 15%;
 }
 .unit-og{
     margin-bottom: 5%;
