updated elections page

--- a/css/styles.css
+++ b/css/styles.css
@@ -229,7 +229,7 @@ header {
 
 /** Election Styles **/
 .bg-election {
-    background: url('../images/election-bg.jpg');
+    background: url('../images/election-bg-two.jpg');
     background-size: cover;
 }
 
